# GPU-Instansing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Folder.DotSettings
cmake/: third_party.cmake
src/GFX/: CMakeLists.txt  Main.cpp  example-base.cpp
src/GPUInstancing/: CMakeLists.txt  GPUInstancing.cpp
src/GPUInstancing/helpers/: App.cpp  App.hpp  ShaderManager.cpp  ShaderManager.hpp  VkHelper.cpp  VkHelper.hpp  pch.hpp
src/Vulkan/: App.cpp  App.hpp  CMakeLists.txt  Config.hpp  Main.cpp  pch.hpp
src/Vulkan/assets/: imgui.ini
src/Vulkan/assets/shaders/: compile.bat  default.frag  default.frag.spv  default.vert  default.vert.spv  instanced.frag  instanced.frag.spv  instanced.vert  instanced.vert.spv  triangle.vert  triangle.vert.spv
src/Vulkan/helpers/: Context.cpp  Context.hpp  Device.cpp  Device.hpp  DeviceMemory.cpp  DeviceMemory.hpp  DeviceQueue.cpp  DeviceQueue.hpp  IComponentSystem.hpp  IRenderPass.hpp  IRenderPipeline.hpp  IRenderer.hpp  Shader.cpp  Shader.hpp  ShaderLayout.cpp  ShaderLayout.hpp  ShaderManager.cpp  ShaderManager.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  VkHelper.cpp  VkHelper.hpp
src/Vulkan/helpers/buffers/: GenericBuffer.cpp  GenericBuffer.hpp  LocalBuffer.cpp  LocalBuffer.hpp  StagingBuffer.cpp  StagingBuffer.hpp
src/Vulkan/helpers/textures/: Sampler.cpp  Sampler.hpp
src/Vulkan/renderers/: DefaultRenderer.cpp  DefaultRenderer.hpp  InstancedCachedRenderer.cpp  InstancedCachedRenderer.hpp  InstancedCoherentRenderer.cpp  InstancedCoherentRenderer.hpp  InstancedRenderer.cpp  InstancedRenderer.hpp  InstancedRendererChunked.cpp  InstancedRendererChunked.hpp  MainComponentSystem.cpp  MainComponentSystem.hpp  MainRenderPass.cpp  MainRenderPass.hpp  MainRenderPipeline.cpp  MainRenderPipeline.hpp  MainRenderer.cpp  MainRenderer.hpp
